readme = "README.md"

packages = [
    { include = "poetry", from = "src" }
]
include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.build]
generate-setup-file = false

# Requirements
[tool.poetry.dependencies]
python = "^3.7"
poetry-core = "^1.1.0a6"

[tool.poetry.dev-dependencies]
tox = "^3.18"
pytest = "^6.2"

[tool.poetry.scripts]
poetry = "poetry.console.application:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
